--- a/packages/api/chart/Chart.yaml
+++ b/packages/api/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: leapfrogai
-description: A deployment of AI tools
+name: leapfrogai-api
+description: "A Python API that shadows the OpenAI API specification"
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -23,4 +23,6 @@ version: 0.10.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+# x-release-please-start-version
+appVersion: 0.10.0
+# x-release-please-end
