--- a/packages/api/chart/templates/api/service.yaml
+++ b/packages/api/chart/templates/api/service.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: {{ include "chart.fullname" . }}
   namespace: {{ .Release.Namespace }}
   annotations:
-    zarf.dev/connect-description: "Load the OpenAPI spec for the LFAI API"
+    zarf.dev/connect-description: "Load the OpenAPI specification for the LeapfrogAI API"
     zarf.dev/connect-url: "/docs"
   labels:
-    zarf.dev/connect-name: lfai-api
+    zarf.dev/connect-name: {{ include "chart.fullname" . }}
 spec:
   selector:
-    app: api
+    app: {{ include "chart.fullname" . }}
   ports:
     - name: http
       protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: {{ .Values.api.env.port }}
+      targetPort: {{ .Values.api.env.port }}
   type: ClusterIP
