--- a/packages/api/chart/templates/api/permissions.yaml
+++ b/packages/api/chart/templates/api/permissions.yaml
@@ -1,14 +1,18 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: read-configmaps
+  name: {{ include "chart.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: read-configmaps
+  name: {{ include "chart.fullname" . }}-read-configmaps
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
 rules:
   - apiGroups:
       - ""
@@ -23,12 +27,14 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: read-configmaps
+  name: {{ include "chart.fullname" . }}-read-configmaps
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: read-configmaps
+  name: {{ include "chart.fullname" . }}-read-configmaps
 subjects:
   - kind: ServiceAccount
-    name: read-configmaps
+    name: {{ include "chart.serviceAccountName" . }}
