--- a/packages/api/chart/templates/migration-job.yaml
+++ b/packages/api/chart/templates/migration-job.yaml
@@ -1,10 +1,15 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: api-migrations
+  name: {{ include "chart.fullname" . }}-migrations
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
 spec:
   template:
+    metadata:
+      labels:
+        {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
@@ -23,8 +28,6 @@ spec:
               value: "{{ .Values.api.migration.env.serviceName }}"
             - name: MIGRATION_SERVICE_PORT
               value: "{{ .Values.api.migration.env.servicePort }}"
-
-          # NOTE: This command is assuming the default username.
           command: ["/bin/sh"]
           args:
             - -c
