--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -40,6 +40,11 @@
           "type": "generic",
           "path": "**/zarf-config.yaml",
           "glob": true
+        },
+        {
+          "type": "generic",
+          "path": "**/hugo.toml",
+          "glob": true
         }
       ]
     }
