--- a/tests/Makefile
+++ b/tests/Makefile
@@ -27,7 +27,7 @@ test-env: set-supabase
 	@read -s -p "Enter your DEV API password: " SUPABASE_PASS; echo; \
 	$(call get_jwt_token,"${SUPABASE_URL}/auth/v1/token?grant_type=password")
 
-test-api-intergation: set-supabase
+test-api-integration: set-supabase
 	source .env; PYTHONPATH=$$(pwd) pytest -vv -s tests/integration/api
 
 test-api-unit: set-supabase
