--- a/packages/text-embeddings/pyproject.toml
+++ b/packages/text-embeddings/pyproject.toml
@@ -7,7 +7,7 @@ version = "0.11.0"
 # x-release-please-end
 
 dependencies = [
-    "InstructorEmbedding >= 1.0.1",
+    "InstructorEmbedding == 1.0.1",
     "torch == 2.2.0",
     "numpy == 1.26.3",
     "tqdm == 4.66.3",
