--- a/packages/vllm/pyproject.toml
+++ b/packages/vllm/pyproject.toml
@@ -7,12 +7,12 @@ version = "0.11.0"
 # x-release-please-end
 
 dependencies = [
-    "pydantic >= 2.3.0",
+    "pydantic == 2.3.0",
     "vllm==0.4.2",
-    "python-dotenv>=1.0.1",
-    "aiostream>=0.5.2",
+    "python-dotenv==1.0.1",
+    "aiostream==0.5.2",
     "leapfrogai-sdk",
-    "confz>=2.0.1"
+    "confz==2.0.1"
 ]
 requires-python = "~=3.11"
 readme = "README.md"
