--- a/src/leapfrogai_sdk/pyproject.toml
+++ b/src/leapfrogai_sdk/pyproject.toml
@@ -7,14 +7,14 @@ version = "0.11.0"
 # x-release-please-end
 
 dependencies = [
-    "grpcio >= 1.56.0",
-    "grpcio-tools >= 1.62.1",
-    "protobuf >= 4.23.3",
-    "grpcio-reflection >=1.58.0",
-    "grpcio-health-checking >=1.58.0",
-    "confz >= 2.0.1",
-    "pydantic >= 2.0",
-    "click >= 8.1.7",
+    "grpcio == 1.56.0",
+    "grpcio-tools == 1.62.1",
+    "protobuf == 4.23.3",
+    "grpcio-reflection ==1.58.0",
+    "grpcio-health-checking ==1.58.0",
+    "confz == 2.0.1",
+    "pydantic == 2.0",
+    "click == 8.1.7",
 ]
 requires-python = "~=3.11"
 
