--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "leapfrogai"
-description = "ChatGPT type capabilities for secure, local, air-gapped systems."
+description = "OpenAI-like capabilities for secure, local, air-gapped systems."
 authors = [{ name = "LeapfrogAI Team", email = "ai@defenseunicorns.com" }]
 
 # x-release-please-start-version
@@ -10,7 +10,7 @@ version = "0.11.0"
 readme = "README.md"
 license = {file = "LICENSE"}
 
-dependencies = [  # Dev dependencies needed for all of lfai
+dependencies = [  # Dev dependencies needed for all of LeapfrogAI
     "openai",
     "pip-tools == 7.3.0",
     "httpx",
@@ -30,12 +30,13 @@ dev = [
 ]
 
 dev-whisper = [
-    "ctranslate2",
-    "transformers[torch]"
+    "ctranslate2 == 4.1.0",
+    "transformers[torch] == 4.39.3",
 ]
 
 dev-vllm = [
-    "confz"
+    "confz == 2.0.1",
+    "huggingface_hub == 0.24.5"
 ]
 
 [tool.pip-tools]
