--- a/packages/whisper/pyproject.toml
+++ b/packages/whisper/pyproject.toml
@@ -16,17 +16,14 @@ readme = "README.md"
 
 [project.optional-dependencies]
 
-dev = [
-    "ctranslate2 == 4.1.0",
-    "transformers[torch] == 4.39.3",
-]
+dev = ["ctranslate2 == 4.1.0", "transformers[torch] == 4.39.3"]
 
 [tool.pip-tools]
 generate-hashes = true
 
 [tool.setuptools]
 packages = ["leapfrogai_sdk"]
-package-dir = {"" = "../../src"}
+package-dir = { "" = "../../src" }
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
