--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ version = "0.11.0"
 # x-release-please-end
 
 readme = "README.md"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 
-dependencies = [  # Dev dependencies needed for all of LeapfrogAI
+dependencies = [ # Dev dependencies needed for all of LeapfrogAI
     "openai",
     "pip-tools == 7.3.0",
     "httpx",
     "ruff",
-    "python-dotenv"
+    "python-dotenv",
 ]
 requires-python = "~=3.11"
 
@@ -26,18 +26,12 @@ dev = [
     "requests",
     "requests-toolbelt",
     "pytest",
-    "huggingface_hub[cli,hf_transfer]"
+    "huggingface_hub[cli,hf_transfer]",
 ]
 
-dev-whisper = [
-    "ctranslate2 == 4.1.0",
-    "transformers[torch] == 4.39.3",
-]
+dev-whisper = ["ctranslate2 == 4.1.0", "transformers[torch] == 4.39.3"]
 
-dev-vllm = [
-    "confz == 2.0.1",
-    "huggingface_hub == 0.24.5"
-]
+dev-vllm = ["confz == 2.0.1", "huggingface_hub == 0.24.5"]
 
 [tool.pip-tools]
 generate-hashes = true
