--- a/bundles/latest/cpu/uds-bundle.yaml
+++ b/bundles/latest/cpu/uds-bundle.yaml
@@ -11,42 +11,42 @@ metadata:
 packages:
   # Supabase backend for the UI and API to interface with Postgresql
   - name: supabase
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/supabase
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/supabase
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # OpenAI-like API
+  # API
   - name: leapfrogai-api
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-api
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-api
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # Model for generic chat and summarization
-  - name: vllm
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/vllm
+  # Chat Model
+  - name: llama-cpp-python
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/llama-cpp-python
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # Model for providing vector embeddings for text
+  # Text Embeddings Model
   - name: text-embeddings
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/text-embeddings
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/text-embeddings
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # Model for converting audio to text
+  # Transcription Model
   - name: whisper
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/whisper
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
   # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
   - name: leapfrogai-ui
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-ui
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
