--- a/bundles/latest/gpu/uds-bundle.yaml
+++ b/bundles/latest/gpu/uds-bundle.yaml
@@ -11,42 +11,42 @@ metadata:
 packages:
   # Supabase backend for the UI and API to interface with Postgresql
   - name: supabase
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/supabase
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/supabase
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # API
+  # OpenAI-like API
   - name: leapfrogai-api
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-api
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-api
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # Chat Model
-  - name: llama-cpp-python
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/llama-cpp-python
+  # Model for generic chat and summarization
+  - name: vllm
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/vllm
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # Text Embeddings Model
+  # Model for providing vector embeddings for text
   - name: text-embeddings
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/text-embeddings
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/text-embeddings
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
-  # Transcription Model
+  # Model for converting audio to text
   - name: whisper
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/whisper
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
 
   # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
   - name: leapfrogai-ui
-    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
+    repository: ghcr.io/defenseunicorns/packages/uds/leapfrogai/leapfrogai-ui
     # x-release-please-start-version
     ref: 0.11.0
     # x-release-please-end
