chore(docs): markdown linting and improved documentation (#902)
* WIP docs

* update main README with more context

* revert LICENSE changes

* add DEVELOPMENT.md

* revert bundle move, add new pre-commits

* initial package level markdown organization

* fix minor typo

* add workflow for markdown linting

* completed docs, consistent LeapfrogAI nomenclature

* explicit main readme instructs for local dev

* minor typo, add preferred dev method

* many fixes

* moved dev bundle to developer docs only

* minor vllm typo

* remove README from prettier lint

* docs website pointer back to GH

* more clarifications for API + backend dev

* adds back missing pre-commit

* fix typos, remove locust from api dev

* more typos, .env for local api

* add supabase dashboard secret command

* use uds yq for supabase dashboard secret

* temp Supabase version change

* gato improvements

* Demo video for README.md (#925)

* fix Kyle adds

* Update requirements.md with minimum GPU requirements (#927)

* table of contents reorder

* more clear nvidia-ctk instructions

* more clear nvidia-ctk instructions

---------

Co-authored-by: Kyle Palko <165685856+unicorn-kp@users.noreply.github.com>

--- a/packages/repeater/Makefile
+++ b/packages/repeater/Makefile
@@ -1,6 +1,7 @@
 install:
 	python -m pip install ../../src/leapfrogai_sdk
-	python -m pip install -e ".[dev]"
+	python -m pip install -e .
 
 dev:
+	make install
 	python -m leapfrogai_sdk.cli --app-dir=. main:Model
