--- a/packages/text-embeddings/Makefile
+++ b/packages/text-embeddings/Makefile
@@ -2,5 +2,7 @@ install:
 	python -m pip install ../../src/leapfrogai_sdk
 	python -m pip install -e ".[dev]"
 
+
 dev:
-	python -m leapfrogai_sdk.cli --app-dir=src/ main:Model
+	make install
+	python -m leapfrogai_sdk.cli --app-dir=. main:Model
