--- a/src/leapfrogai_api/pyproject.toml
+++ b/src/leapfrogai_api/pyproject.toml
@@ -28,6 +28,14 @@ dependencies = [
 ]
 requires-python = "~=3.11"
 
+[project.optional-dependencies]
+dev = [
+    "pytest-asyncio",
+    "requests",
+    "requests-toolbelt",
+    "pytest"
+]
+
 [tool.pip-tools]
 generate-hashes = true
 
