--- a/src/leapfrogai_ui/.env.example
+++ b/src/leapfrogai_ui/.env.example
@@ -15,7 +15,7 @@ SUPABASE_AUTH_KEYCLOAK_CLIENT_ID=uds-supabase
 SUPABASE_AUTH_KEYCLOAK_SECRET=<secret>
 #ORIGIN=http://localhost:3000 # set if running in Docker locally (variable is also used in deployment)
 
-#If specified, app will use OpenAI instead of Leapfrog
+#If specified, app will use OpenAI instead of LeapfrogAI
 OPENAI_API_KEY=
 
 # PLAYWRIGHT
