re-add QUANTIZATION, more relevant examples

--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -88,6 +88,7 @@ ARG TRUST_REMOTE_CODE="True" \
     PROMPT_FORMAT_DEFAULTS_TOP_K=0 \
     TENSOR_PARALLEL_SIZE=1 \
     ENFORCE_EAGER=False \
+    QUANTIZATION=gptq \
     GPU_MEMORY_UTILIZATION=0.90 \
     WORKER_USE_RAY=True \
     ENGINE_USE_RAY=True
@@ -119,6 +120,7 @@ ENV LAI_TRUST_REMOTE_CODE=${TRUST_REMOTE_CODE} \
     LAI_PROMPT_FORMAT_DEFAULTS_TOP_P=${PROMPT_FORMAT_DEFAULTS_TOP_P} \
     LAI_PROMPT_FORMAT_DEFAULTS_TOP_K=${PROMPT_FORMAT_DEFAULTS_TOP_K} \
     LAI_TENSOR_PARALLEL_SIZE=${TENSOR_PARALLEL_SIZE} \
+    LAI_QUANTIZATION=${QUANTIZATION} \
     LAI_ENFORCE_EAGER=${ENFORCE_EAGER} \
     LAI_GPU_MEMORY_UTILIZATION=${GPU_MEMORY_UTILIZATION} \
     LAI_WORKER_USE_RAY=${WORKER_USE_RAY} \
