fix os env, README, default quant is NONE

--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -88,7 +88,7 @@ ARG TRUST_REMOTE_CODE="True" \
     PROMPT_FORMAT_DEFAULTS_TOP_K=0 \
     TENSOR_PARALLEL_SIZE=1 \
     ENFORCE_EAGER=False \
-    QUANTIZATION=gptq \
+    QUANTIZATION=None \
     GPU_MEMORY_UTILIZATION=0.90 \
     WORKER_USE_RAY=True \
     ENGINE_USE_RAY=True
