chore(deps): pin all python deps and standardize pyprojects (#929)

--- a/packages/llama-cpp-python/pyproject.toml
+++ b/packages/llama-cpp-python/pyproject.toml
@@ -6,24 +6,19 @@ description = "A LeapfrogAI API-compatible llama-cpp-python wrapper for quantize
 version = "0.11.0"
 # x-release-please-end
 
-dependencies = [
-    "llama-cpp-python == 0.2.72",
-    "leapfrogai-sdk",
-]
+dependencies = ["llama-cpp-python == 0.2.72", "leapfrogai-sdk"]
 requires-python = "~=3.11"
 readme = "README.md"
 
 [project.optional-dependencies]
-dev = [
-    "huggingface_hub[cli,hf_transfer]"
-]
+dev = ["huggingface_hub[cli,hf_transfer] == 0.24.5"]
 
 [tool.pip-tools]
 generate-hashes = true
 
 [tool.setuptools]
 packages = ["leapfrogai_sdk"]
-package-dir = {"" = "../../src"}
+package-dir = { "" = "../../src" }
 
 [tool.pytest.ini_options]
 addopts = ["--import-mode=importlib"]
