feat(leapfrogai_api/tests): fix race condition in test, make config a singleton, stop event stuff

--- a/tests/unit/leapfrogai_api/utils/test_config.toml
+++ b/tests/unit/leapfrogai_api/utils/test_config.toml
@@ -4,9 +4,7 @@ backend = "backend1"
 type = "type1"
 dimensions = 768
 precision = 32
-capabilities = [
-    "embeddings",
-]
+capabilities = ["embeddings"]
 
 [[models]]
 name = "model2"
