--- a/.github/workflows/e2e-registry1-weekly.yaml
+++ b/.github/workflows/e2e-registry1-weekly.yaml
@@ -1,9 +1,19 @@
-name: e2e-registry1-nightly
+name: e2e-registry1-weekly
 
 on:
   schedule:
     - cron: "0 0 * * 6" # Run every Sunday at 12 AM EST
   workflow_dispatch: # trigger manually as needed
+  pull_request:
+    types:
+      - opened # default trigger
+      - reopened # default trigger
+      - synchronize # default trigger
+      - ready_for_review # don't run on draft PRs
+      - milestoned # allows us to trigger on bot PRs
+    paths:
+      - .github/workflows/e2e-registry1-weekly.yaml
+      - uds-bundles/latest/**
 
 concurrency:
   group: e2e-e2e-registry1-nightly-${{ github.ref }}
