--- a/packages/text-embeddings/Dockerfile
+++ b/packages/text-embeddings/Dockerfile
@@ -12,14 +12,14 @@ RUN python3.11 -m venv .venv
 ENV PATH="/leapfrogai/.venv/bin:$PATH"
 
 # copy and install all python dependencies
-# NOTE: We are copying the leapfrogai whl to this filename because installing 'optional extras' from
+# NOTE: We are copying the leapfrog whl to this filename because installing 'optional extras' from
 #       a wheel requires the absolute path to the wheel file (instead of a wildcard whl)
 COPY --from=sdk /leapfrogai/${SDK_DEST} ${SDK_DEST}
 COPY packages/text-embeddings packages/text-embeddings
 
-RUN rm -f packages/text-embeddings/build/*.whl
-RUN python -m pip wheel packages/text-embeddings -w packages/text-embeddings/build --find-links=${SDK_DEST}
-RUN pip install packages/text-embeddings/build/lfai_text_embeddings*.whl --no-index --find-links=packages/text-embeddings/build/
+RUN rm -f packages/text-embeddings/build/*.whl && \
+    python -m pip wheel packages/text-embeddings -w packages/text-embeddings/build --find-links=${SDK_DEST} && \
+    pip install packages/text-embeddings/build/lfai_text_embeddings*.whl --no-index --find-links=packages/text-embeddings/build/
 
 # hardened and slim python image
 FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11
@@ -32,6 +32,6 @@ COPY --from=builder /leapfrogai/.venv/ /leapfrogai/.venv/
 
 COPY packages/text-embeddings/main.py .
 
-EXPOSE 50051:50051
+EXPOSE 50051
 
 ENTRYPOINT ["python", "-u", "main.py"]
