--- a/.github/actions/uds-cluster/action.yaml
+++ b/.github/actions/uds-cluster/action.yaml
@@ -15,8 +15,8 @@ runs:
     - name: Setup UDS Environment
       uses: defenseunicorns/uds-common/.github/actions/setup@822dac4452e6815aadcf09f487406ff258756a0c # v0.14.0
       with:
-        registry1Username: ${{ inputs.IRON_BANK_ROBOT_USERNAME }}
-        registry1Password: ${{ inputs.IRON_BANK_ROBOT_PASSWORD }}
+        registry1Username: ${{ inputs.registry1Username }}
+        registry1Password: ${{ inputs.registry1Password }}
         ghToken: ${{ inputs.ghToken }}
         udsCliVersion: 0.14.0
 
