fix vllm uds setup, pt.2

--- a/.github/workflows/e2e-vllm.yaml
+++ b/.github/workflows/e2e-vllm.yaml
@@ -67,12 +67,13 @@ jobs:
           with:
             additionalOptionalDep: dev-vllm
 
-        - name: Setup UDS Cluster
-          uses: ./.github/actions/uds-cluster
+        - name: Setup UDS Environment
+          uses: defenseunicorns/uds-common/.github/actions/setup@822dac4452e6815aadcf09f487406ff258756a0c # v0.14.0
           with:
             registry1Username: ${{ secrets.IRON_BANK_ROBOT_USERNAME }}
             registry1Password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
             ghToken: ${{ secrets.GITHUB_TOKEN }}
+            udsCliVersion: 0.14.0
 
         ########## c
         # vLLM
