fix version for registry1 image

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -45,6 +45,11 @@
           "type": "generic",
           "path": "**/hugo.toml",
           "glob": true
+        },
+        {
+          "type": "generic",
+          "path": ".github/workflows/e2e-registry1-weekly.yaml",
+          "glob": true
         }
       ]
     }
