missing double quotes yq

--- a/.github/workflows/e2e-registry1-weekly.yaml
+++ b/.github/workflows/e2e-registry1-weekly.yaml
@@ -58,7 +58,7 @@ jobs:
 
           uds zarf tools yq -i '.packages[1].repository = "registry1.dso.mil/ironbank/opensource/defenseunicorns/leapfrogai/api"' \
           uds-bundles/latest/cpu/uds-bundle.yaml
-          uds zarf tools yq -i '.packages[1].ref = v${{ env.VERSION }}' uds-bundles/latest/cpu/uds-bundle.yaml
+          uds zarf tools yq -i '.packages[1].ref = "v${{ env.VERSION }}"' uds-bundles/latest/cpu/uds-bundle.yaml
 
       - name: Create Bundle
         run: |
