hadolint config changes, pt.3

--- a/.hadolint.yaml
+++ b/.hadolint.yaml
@@ -1,11 +1,10 @@
 failure-threshold: error
-override:
-  warning:
-    - DL3007 # use of latest image
-    - DL3042 # pip --no-cache-dir
-    - DL4006 # shell usage warning
-    - DL3009 # apt-get list
-    - DL3015 # --no-install-recommends
-    - DL3008 # pinning distro package versions
-    - DL3045 # usage of relative COPY
-    - DL3002 # last user as root
+ignored:
+  - DL3007 # use of latest image
+  - DL3042 # pip --no-cache-dir
+  - DL4006 # shell usage warning
+  - DL3009 # apt-get list
+  - DL3015 # --no-install-recommends
+  - DL3008 # pinning distro package versions
+  - DL3045 # usage of relative COPY
+  - DL3002 # last user as root
