--- a/.github/workflows/e2e-registry1-weekly.yaml
+++ b/.github/workflows/e2e-registry1-weekly.yaml
@@ -15,19 +15,14 @@ on:
       - .github/workflows/e2e-registry1-weekly.yaml
       - uds-bundles/latest/**
 
-env:
-  # x-release-please-start-version
-  VERSION: 0.11.0
-  # x-release-please-end
-
 concurrency:
   group: e2e-registry1-weekly-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  test-flavor:
+  test-flavors:
     runs-on: ai-ubuntu-big-boy-8-core
-    name: Test LeapfrogAI Flavor
+    name: Test LeapfrogAI Flavors
 
     permissions:
       contents: read
@@ -48,17 +43,18 @@ jobs:
           registry1Password: ${{ secrets.IRON_BANK_ROBOT_PASSWORD }}
           ghToken: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup LFAI-API and Supabase
+      - name: Setup LeapfrogAI API and Supabase
         uses: ./.github/actions/lfai-core
 
-      - name: Set Flavor and Version
+      - name: Set Bundle Flavor Fields
         run: |
-          uds zarf tools yq -i '.metadata.version = "registry1"' \
-          uds-bundles/latest/cpu/uds-bundle.yaml
+          uds zarf tools yq -i '.packages[1] |= del(.repository)' uds-bundles/latest/cpu/uds-bundle.yaml
+          uds zarf tools yq -i '.packages[1] |= .ref = "registry1"' uds-bundles/latest/cpu/uds-bundle.yaml
+          uds zarf tools yq -i '.packages[1] |= .path = "../../../packages/api"' uds-bundles/latest/cpu/uds-bundle.yaml
 
-          uds zarf tools yq -i '.packages[1].repository = "registry1.dso.mil/ironbank/opensource/defenseunicorns/leapfrogai/api"' \
-          uds-bundles/latest/cpu/uds-bundle.yaml
-          uds zarf tools yq -i '.packages[1].ref = "v${{ env.VERSION }}"' uds-bundles/latest/cpu/uds-bundle.yaml
+      - name: Create Registry1 Package(s)
+        run: |
+          LOCAL_VERSION=registry1 FLAVOR=registry1 make build-api
 
       - name: Create Bundle
         run: |
